--- a/src/App.scss
+++ b/src/App.scss
@@ -18,14 +18,18 @@
   margin-left: 20px;
 }
 
+.slide_container{
+  display: inline-block;
+  justify-self: center;
+}
+
 .btn-group button {
   border-radius: 25px;
   background-color: #ffffff; 
   border: 1px solid rgb(0, 0, 0);
   color: rgb(0, 0, 0); 
   padding: 15px 25px; 
-  cursor: pointer;
-  width: 500px; 
+  width: 45rem; 
   font-size: 1rem;
   border-spacing: 30px;
   margin-top: 20px;
