--- a/src/Components/about.scss
+++ b/src/Components/about.scss
@@ -21,10 +21,9 @@
   .read-more-btn {
     background: grey;
     border: 1px solid grey;
-    border-radius: 20%;
+    border-radius: 25px;
     color: white;
     cursor: pointer;
-    margin-top: 0.5rem;
     font-size: 1rem;
     padding: 10px;
     text-decoration: none;
