--- a/src/Components/about.scss
+++ b/src/Components/about.scss
@@ -3,6 +3,7 @@
     margin: 2rem auto;
     text-align: center;
     position: relative;
+    color: black;
   }
   
   .about-text {
@@ -19,8 +20,8 @@
   }
   
   .read-more-btn {
-    background: grey;
-    border: 1px solid grey;
+    background: rgb(209, 209, 209);
+    border: 1px solid rgb(209, 209, 209);
     border-radius: 25px;
     color: white;
     cursor: pointer;
