added new videos and contac form

--- a/src/index.scss
+++ b/src/index.scss
@@ -21,10 +21,10 @@ body {
 }
 
 h1 {
-  font-size: 3.2em;
+  font-size: 1rem;
   line-height: 1.1;
   font-style: bold;
-  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-variant: small-caps;
 }
 
 
